[package]
name = "aranet4-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Logan Praneis <lpraneis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tui = "0.17"
crossterm = "0.22"
aranet4 = "0.1.0"
tokio = { version = "1", features = ["full"] }
argh = "0.1.7"
log = "0.4"
tui-logger = "0.7"
chrono = "0.4.22"
